docs(product): add swagger documetation for product api
